<resources>
    <string name="app_name">Recorder</string>

    <string name="msg_recording">Recording in process…</string>
    <string name="msg_stopping">Stopping…</string>

    <string name="msg_permissions_granted">All necessary permissions are granted.</string>
    <string name="msg_permissions_not_granted">Some permissions are not granted successfully.</string>
    <string name="msg_change_root_directory">Recording directory changed.</string>

    <string name="phrase_grant_permissions">Grant permissions</string>
    <string name="phrase_daily_recording">Daily recording</string>
    <string name="phrase_start_time">Start time</string>
    <string name="phrase_end_time">End time</string>
    <string name="phrase_change_folder">Change folder</string>
    <string name="phrase_graph_update_period">Graph update period(ms)</string>
    <string name="phrase_measure_period">Sound level measure period(ms)</string>
    <string name="phrase_filename_pattern">Filename pattern</string>
    <string name="phrase_ui">User interface</string>

    <string name="word_settings">Settings</string>
    <string name="word_retry">Retry</string>
    <string name="word_period">Period</string>
    <string name="word_schedule">Schedule</string>
    <string name="word_recording">Recording</string>
    <string name="word_browse">Browse</string>
    <string name="word_average">Average</string>
    <string name="word_max">Maximum</string>
    <string name="word_duration">Duration</string>
    <string name="word_measure">Measure</string>
</resources>