<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_browse"
        android:icon="@drawable/ic_baseline_folder_24"
        android:title="@string/word_browse"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_timer"
        android:icon="@drawable/ic_baseline_timer_24"
        android:title="@string/word_timer"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_folder"
        android:icon="@drawable/ic_baseline_create_new_folder_24"
        android:title="@string/phrase_change_folder"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_grant_permissions"
        android:icon="@drawable/ic_baseline_fingerprint_24"
        android:title="@string/phrase_grant_permissions"
        app:showAsAction="ifRoom" />

</menu>